# GDQ2026-ACE-DEMO-HGSS

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  run_docker.sh
assets/: image_converter.py
dependencies/: requirements.txt
project/: .gitignore  CMakeLists.txt  build.sh  dump.sh  installer.lua  packager.py  packager.yaml  toolchain.cmake
project/eventdata/0474/: 0474.event
project/games/diamond_pearl/libs/graphics/: poke_sprite.h  sprite_functions.h
project/games/diamond_pearl/libs/util/: memory.h
project/games/diamond_pearl/sprite_editing/inject_custom_palette/: linker.ld
project/games/heartgold_soulsilver/: CMakeLists.txt
project/games/heartgold_soulsilver/boot_hijack_payload/: CMakeLists.txt  linker.ld  main.c
project/games/heartgold_soulsilver/boot_hijack_payload/src/: boot_hijack_payload.asm
project/games/heartgold_soulsilver/cardi_hijack_hook/: linker.ld
project/games/heartgold_soulsilver/cardi_hijack_hook/src/: cardi_hijack_hook.asm
project/games/heartgold_soulsilver/cardi_hijack_payload/: CMakeLists.txt  main.c
project/games/heartgold_soulsilver/initial_payload/: CMakeLists.txt  main.c
project/games/heartgold_soulsilver/libs/graphics/: poke_sprite.c  poke_sprite.h  sprite_functions.h
project/games/heartgold_soulsilver/libs/util/: functions.h  macros.h  memory.h
project/games/heartgold_soulsilver/palette_inject_hook/src/: palette_inject_hook.asm
project/games/heartgold_soulsilver/sprite_editing/: CMakeLists.txt
project/games/heartgold_soulsilver/sprite_editing/inject_custom_palette/: CMakeLists.txt  main.c
project/games/heartgold_soulsilver/sprite_editing/inject_custom_sprite/: CMakeLists.txt
project/games/heartgold_soulsilver/sprite_editing/load_sprite_from_narc/: CMakeLists.txt
project/games/heartgold_soulsilver/sprite_editing/set_sprite_hooks/: CMakeLists.txt  main.c
project/games/heartgold_soulsilver/sprite_inject_hook/src/: sprite_inject_hook.asm
project/games/heartgold_soulsilver/uncompressor_hijack_hook/: CMakeLists.txt  linker.ld
project/games/heartgold_soulsilver/uncompressor_hijack_payload/: CMakeLists.txt  linker.ld  main.c
project/linking/: asm_linker.ld
project/scripts/: README.md
project/scripts/0130/: 0130.script  scripts
project/scripts/0131/: 0131.script  actions  functions  scripts
project/scripts/_846/: 846.script
project/scripts/script_0xEB/: event_0x2
project/src/: CMakeLists.txt
project/src/hooks/: CMakeLists.txt
project/src/hooks/AllocAndReadWholeNarcMemberByIdPair/: hook.asm  linker.ld
project/src/hooks/BufferBoxMonNickname/: hook.asm  linker.ld
project/src/hooks/CARDI_ReadCard/: hook.asm  linker.ld
project/src/hooks/MIi_UncompressBackward/: hook.asm
project/src/hooks/NewString_ReadMsgData/: hook.asm
project/src/hooks/OSi_DoResetSystem/: hook.asm
project/src/hooks/ReadMsgDataIntoString/: hook.asm
project/src/hooks/ReadWholeNarcMemberByIdPair/: hook.asm
project/src/hooks/SaveData_TryLoadOnContinue/: hook.asm  linker.ld
project/src/hooks/ScrCmd_151/: hook.asm  linker.ld
project/src/hooks/_sub_PokepicManager_BufferCharData_0/: hook.asm
project/src/hooks/_sub_PokepicManager_BufferCharData_1/: hook.asm
project/src/hooks/_sub_PokepicManager_BufferPlttData_0/: hook.asm  linker.ld
project/src/hooks/archive_data_load/: hook.asm  linker.ld
project/src/hooks/archive_data_load_malloc/: hook.asm
project/src/hooks/boot/: linker.ld
project/src/hooks/cardi_readcard/: hook.asm
project/src/hooks/communication_error/: hook.asm  linker.ld
project/src/hooks/game_version/: hook.asm  linker.ld
project/src/hooks/get_battle_background/: hook.asm  linker.ld
project/src/hooks/get_string/: hook.asm  linker.ld
project/src/hooks/get_string_alloc/: hook.asm  linker.ld
project/src/hooks/get_vec_sinjoh_ruins_orbs/: linker.ld
project/src/hooks/get_vec_sinjoh_ruins_unown_circle/: hook.asm  linker.ld
project/src/hooks/inject_palette/: hook.asm
project/src/hooks/inject_sprite/: hook.asm  linker.ld
project/src/hooks/load_narc/: hook.asm  linker.ld
project/src/hooks/savedata_load/: hook.asm
project/src/hooks/set_partysize/: hook.asm
project/src/hooks/uncompressor/: hook.asm
project/src/libs/graphics/: poke_sprite.h  sprite_functions.h
project/src/libs/util/: functions.h  hooks.hpp  memory.h  types.h
project/src/payloads/: CMakeLists.txt
project/src/payloads/AllocAndReadWholeNarcMemberByIdPair/: linker.ld  main.c
project/src/payloads/BufferBoxMonNickname/: main.c
project/src/payloads/CARDi_ReadCard/: linker.ld  main.c  main.cpp
project/src/payloads/MIi_UncompressBackward/: main.c
project/src/payloads/NewString_ReadMsgData/: linker.ld  main.c
project/src/payloads/OSi_DoResetSystem/: main.c
project/src/payloads/ReadMsgDataIntoString/: linker.ld  main.c
project/src/payloads/ReadWholeNarcMemberByIdPair/: linker.ld  main.c
project/src/payloads/SaveData_TryLoadOnContinue/: linker.ld  main.c
project/src/payloads/_sub_PokepicManager_BufferCharData_0/: linker.ld  main.c
project/src/payloads/_sub_PokepicManager_BufferCharData_1/: main.c
project/src/payloads/_sub_PokepicManager_BufferPlttData_0/: linker.ld  main.c
project/src/payloads/archive_data_load/: main.c
project/src/payloads/archive_data_load_malloc/: linker.ld  main.c
project/src/payloads/cardi_readcard/: linker.ld  main.c  main.cpp
project/src/payloads/get_poke_nickname/: linker.ld  main.c
project/src/payloads/get_string/: linker.ld  main.c
project/src/payloads/get_string_alloc/: main.c
project/src/payloads/get_vec_sinjoh_ruins/: linker.ld  main.c
project/src/payloads/initial_payload/: linker.ld  main.c
project/src/payloads/narc_sprite_load/: linker.ld  main.c
project/src/payloads/palette_load/: main.c
project/src/payloads/reboot/: main.c
project/src/payloads/savedata_load/: main.c
project/src/payloads/set_partysize_0/: linker.ld  main.c
project/src/payloads/sprite_load/: linker.ld
project/src/payloads/uncompressor/: linker.ld  main.c
project/tools/: make_preprocessors.py  toolchain.cmake
project/tools/symbols/: POKEMON_SS_IPGE_01.sym
(+1 files in other folders)
